@@ -1,3 +1,6 @@
+2012-01-08
+ * added records_integer value
+
 2012-01-07
  * rts2-grbd's --create-disabled option
 
